--- a/src/Makefile
+++ b/src/Makefile
@@ -25,4 +25,4 @@ graph500_custom_bfs_sssp: bfs_custom.c sssp_custom.c $(SOURCES) $(HEADERS) $(GEN
 	$(MPICC) $(CFLAGS) $(LDFLAGS) -o graph500_custom_bfs_sssp bfs_custom.c sssp_custom.c csr_reference.c $(SOURCES) $(GENERATOR_SOURCES) -lm
 
 clean:
-	-rm -f graph500_*
+	rm -f graph500_* lucata_generator
